tests/sender/runHeaderCallbacks.out

--HEADERS--
Fatal error: Uncaught Error: Call to undefined method SapiResponse::addHeaderCallback() in /Users/pmjones/Code/pmjones/php-request/tests/sender/runHeaderCallbacks.php:3
Stack trace:
#0 {main}
  thrown in /Users/pmjones/Code/pmjones/php-request/tests/sender/runHeaderCallbacks.php on line 3